--- a/US/lead_data/reuters/exploration/suppression.Rmd
+++ b/US/lead_data/reuters/exploration/suppression.Rmd
@@ -42,7 +42,6 @@ desc |>
   filter((level == "zip") & (Suppression == "FALSE"))
 ```
 
-
 ```{r}
 # load and merge all ZIP states
 # setwd to source files
@@ -57,7 +56,6 @@ Merging:
 merged <- merge_loaded_data(str_to_lower(zip_states))
 # get rid of individual zip state files
 rm(list = str_to_lower(zip_states))
-dim(merged)
 ```
 
 The combined zip data has around 290k observations.
@@ -83,6 +81,9 @@ suppr_summ <- merged |>
          perc_BLL_10_sup = n_BLL_10_sup / n_zips,
          perc_tested_sup = n_tested_sup / n_zips)
 
+```
+
+```{r}
 # display results sorted by tested_sup
 suppr_summ |> 
   arrange(desc(perc_tested_sup))
@@ -127,6 +128,7 @@ desc |>
   rename(level = "Reporting Level") |> 
   filter((str_detect(str_to_lower(level), "tract")) & (Suppression == "FALSE"))
 ```
+
 For the others, suppression rates vary:
 
 ```{r}
@@ -148,11 +150,14 @@ suppr_summ_tract <- merged_tract |>
   mutate(perc_BLL_5_sup = n_BLL_5_sup / n_tracts,
          perc_BLL_10_sup = n_BLL_10_sup / n_tracts,
          perc_tested_sup = n_tested_sup / n_tracts)
+```
 
+```{r}
 # display results sorted by tested_sup
 suppr_summ_tract |> 
   arrange(desc(perc_tested_sup))
 ```
+
 ```{r}
 # plot a scatter of the suppressed tested and BLL_geq_5 ratios
 suppr_summ_tract |>
@@ -167,6 +172,95 @@ suppr_summ_tract |>
   scale_y_continuous(limits = c(0, 1)) +
   theme_bw()
 ```
-### Aggregation to ZIPs
 
-# TODO:
+### Aggregating tracts to ZIPs
+
+We cannot use the wrapper from the *00_tract-zip_crosswalk_function.R* since this is meant to also wrap the aggregation of the tested & BLL variables, which requires a numeric type. At this point, we want to keep suppression information in its raw form, so we proceed "by hand":
+
+```{r}
+setwd("../raw_files")
+tract_path <- 'TRACT_ZIP_032010.xlsx'
+drop_get_from_root(tract_path)
+
+tracttozip <- read_excel(tract_path) %>% 
+  rename(tract=TRACT)
+```
+
+Merge the crosswalking file with
+
+```{r}
+merged_tract <- merged_tract |> 
+  left_join(tracttozip, by = "tract")
+```
+
+First, let's check how good coverage of zips is (in terms of the count):
+
+```{r}
+merged_tract |> 
+  group_by(state) |> 
+  # count NAs in ZIP
+  summarize(n_tracts = n(),
+            n_NA_zip = sum(is.na(ZIP)),
+            perc_tracts_lost = n_NA_zip / n_tracts) |> 
+  arrange(desc(perc_tracts_lost))
+```
+
+Plotting:
+
+```{r}
+merged_tract |> 
+  group_by(state) |> 
+  # count NAs in ZIP
+  summarize(n_tracts = n(),
+            n_NA_zip = sum(is.na(ZIP)),
+            perc_tracts_lost = n_NA_zip / n_tracts) |> 
+  arrange(desc(perc_tracts_lost)) |> 
+  ggplot(aes(x = state, y = perc_tracts_lost)) +
+  geom_bar(stat = "identity") +
+  labs(title = "Percentage of tracts not matched to any ZIP by state",
+       y = "%")
+```
+
+In NYC, this is due to a data issue in how tracts are reported (and how its currently cleaned.)
+
+However, the amount of tracts lost is not insignificant for the other states either. With the current cross-walking file, overall, one loses roughly 18% of the data:
+
+```{r}
+merged_tract |> 
+  summarize(n_tracts = n(),
+            n_NA_zip = sum(is.na(ZIP)),
+            perc_tracts_lost = n_NA_zip / n_tracts) |> 
+  pull(perc_tracts_lost)
+```
+
+Now, let's turn to the second part of the question. If one were to proceed with aggregation to ZIPs, how many ZIPs would contain which nr. of suppressed tracts, and what would their cumulative RES_RATIO be?
+
+```{r}
+agg_results <- merged_tract |> 
+  mutate(any_sup = BLL_geq_5_sup | BLL_geq_10_sup | tested_sup) |>
+  group_by(ZIP) |>
+  summarize(n_tracts = n(),
+            n_BLL_5_sup = sum(BLL_geq_5_sup, na.rm = TRUE),
+            n_BLL_10_sup = sum(BLL_geq_10_sup, na.rm = TRUE),
+            n_tested_sup = sum(tested_sup, na.rm = TRUE),
+            n_any_sup = sum(any_sup, na.rm = TRUE),
+            perc_any_sup = n_any_sup / n_tracts,
+            # get sum of RES RATIO for all tracts
+            cum_RES_RATIO = sum(RES_RATIO, na.rm = TRUE),
+            # get sum of RES RATIO for suppressed tracts
+            cum_RES_RATIO_sup = sum(RES_RATIO[any_sup], na.rm = TRUE)) |> 
+  arrange(desc(perc_any_sup))
+
+agg_results
+```
+
+Plotting the results
+
+```{r}
+agg_results |> 
+  ggplot(aes(x = perc_any_sup)) +
+  geom_histogram(bins = 20) +
+  labs(title = "Count of ZIPs by percentage of suppressed tracts",
+       x = "% of tracts with suppression in ANY variable",
+       y = "Count")
+```
