--- a/models/poisson_regression_censoring_MN.qmd
+++ b/models/poisson_regression_censoring_MN.qmd
@@ -1,6 +1,19 @@
+---
+title: "BLL poisson regression demonstration"
+format:
+    html:
+      code-fold: true
+---
+
+## Introduction
+
 This notebook tries to imitate the [poisson regression](https://github.com/fditraglia/learn-bayes/blob/main/censored-data-STAN.qmd) example with censored data by running a toy model on Minnesota and Massachusettes data.
 
-These two states offer themselves for this purpose since they both do NOT suppress tests, and have around 22% and 50% suppression rates, with a fairly even number of tracts (around 1.5k).
+These two states offer themselves for this purpose since they both do NOT suppress tests, and have around 22% and 50% suppression rates, with a fairly even number of racts (around 1.5k).
+
+Since the different tracts have different populations of kids, this will be featured in the conditional mean function for the log rate, imitating the monastery example in this other [notebook from learn-bayes](https://github.com/fditraglia/learn-bayes/blob/main/poisson-regression-STAN.qmd).
+
+## Loading the data
 
 ```{r}
 library(tidyverse)
@@ -11,6 +24,7 @@ source("find_and_set_directory.R")
 
 ```{r}
 find_and_set_directory("source files")
+source("../00_merging_functions.R")
 load_states(c("MN","MA"))
 mn <- mn |> filter(year == 2010)
 ma <- ma |> filter(year == 2010)
