--- a/models/Rhode_Island.qmd
+++ b/models/Rhode_Island.qmd
@@ -295,3 +295,5 @@ ggplot(all_draws, aes(x = beta, fill = Model)) +
 I would have expected more uncertain estimates of both parameters with more suppression, both in terms of data points and censoring range... This is not really happening here.
 
 Also, alpha seems oddly shifted to the right.
+
+Perhaps this is because of the influence of "outlier" values on ignoring testing counts?
